@@ -24,6 +24,10 @@ v1.4
 v1.3.2 (2013-XX-XX)
 -------------------
 
+* fixed a locking issue in collection.truncate()
+
+* fixed value overflow in accumulated filesizes reported by collection.figures()
+
 * issue #545: AQL FILTER unnecessary (?) loop
 
 * issue #549: wrong return code with --daemon
